# cmake-config

./: CMakeLists.txt  Qt-config.cmake  openCV-config.cmake  openMP-config.cmake
